recursion.lessons.recursion.polygonfractal.PolygonFractal.scala.error
PolygonFractal:1: error: Missing closing brace `}' assumed here
def polygonFractal (levels:Int, sides:Int, length:Double, shrink:Double) {
^